<resources>
    <string name="app_name">AndroidAppWireframe</string>
    <string name="mobilenumber">Mobile Number*</string>
    <string name="fullname">Full Name*</string>
    <string name="gender">Gender*</string>
    <string name="dob">DOB*</string>
    <string name="add1">Address Line 1*</string>
    <string name="add2">Address Line 2</string>
    <string name="pincode">Pincode*</string>
    <string name="check">Check</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>