<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:paddingHorizontal="20dp"
    android:paddingVertical="20dp"
    app:chainUseRtl="true"
    app:layout_constraintVertical_chainStyle="spread"
    tools:context=".view.activities.RegisterActivity"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container">

        <LinearLayout
            android:id="@+id/ll_outer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"


            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_mobile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobilenumber"
                app:hintTextColor="@color/black"
                app:layout_constraintBottom_toTopOf="@id/space1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <EditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittextbackground"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:textColor="@color/black"

                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:id="@+id/space1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                app:layout_constraintBottom_toTopOf="@id/et_fullname_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_mobile_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_fullname_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullname"
                app:hintTextColor="@color/black"
                app:layout_constraintBottom_toTopOf="@id/spinner_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/space1">

                <EditText
                    android:id="@+id/et_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edittextbackground"

                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:maxLength="50"
                    />

            </com.google.android.material.textfield.TextInputLayout>



                <Spinner
                    android:id="@+id/spinner_id"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:layout_marginVertical="6dp"
                    />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_dob_layout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dob"
                app:hintTextColor="@color/black"
                app:layout_constraintBottom_toTopOf="@id/space2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_id">

                <EditText
                    android:id="@+id/et_dob"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edittextbackground"

                    android:textColor="@color/black"
                    android:textSize="15sp"
                    >



                </EditText>


            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:id="@+id/space2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                app:layout_constraintBottom_toTopOf="@id/ed_address1_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_dob_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_address1_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add1"
                app:hintTextColor="@color/black"

                app:layout_constraintBottom_toTopOf="@id/et_address2_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/space2">

                <EditText
                    android:id="@+id/ed_address1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edittextbackground"

                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:maxLength="50"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_address2_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add2"
                app:hintTextColor="@color/black"
                android:layout_marginVertical="6dp"
                app:layout_constraintBottom_toTopOf="@id/space3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_address1_layout">

                <EditText
                    android:id="@+id/et_address2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edittextbackground"

                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:maxLength="50"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:id="@+id/space3"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                app:layout_constraintBottom_toTopOf="@id/ll"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_address2_layout" />

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/district"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/space3">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:hint="@string/pincode"
                    app:hintTextColor="@color/black"

                    android:clickable="true"
                    android:focusableInTouchMode="true"
                    android:focusable="true"
                    >

                    <EditText
                        android:focusable="true"
                        android:clickable="true"
                        android:focusableInTouchMode="true"
                        android:id="@+id/ed_pincode"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edittextbackground"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:hintTextColor="@color/black"
                        android:maxLength="6"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttoncheck"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:text="@string/check"
                    android:enabled="false"

                    />

            </LinearLayout>


            <TextView
                android:id="@+id/district"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="10dp"
                android:text="District :"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/state"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll"

                />


            <TextView
                android:id="@+id/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="10dp"
                android:text="State :"
                android:textColor="@color/black"
                android:textSize="20sp"

                app:layout_constraintBottom_toTopOf="@id/register"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/district"

                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@color/primaryColor"
                android:text="Register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/state"

                />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>